--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,9 @@
 	<title>My Webpage</title>
 </head>
 <body>
-	Hello, World! 
+	<form>
+		<input type="text" placeholder="Full name" name="name">
+		<button>Submit!</button>
+	</form> 
 </body>
 </html>
