--- a/hello.html
+++ b/hello.html
@@ -2,11 +2,22 @@
 <html>
 <head>
 	<title>My Webpage</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<style type="text/css">
+		p{
+			color: red;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
+	<h1 style="color:blue; text-align: center;">Welcome to my page</h1>
+	<h2>Hi there welcome again</h2>
 	<form>
 		<input type="text" placeholder="Full name" name="name">
 		<button>Submit!</button>
 	</form> 
+	<p>Hi there! This aia a paragraph</p>
+	<p>This is another paragraph</p>
 </body>
 </html>
