--- a/hello.html
+++ b/hello.html
@@ -8,9 +8,21 @@
 			color: red;
 			text-align: center;
 		}
+
+		div{
+			background-color: pink;
+			height: 300px;
+			width: 200px;
+			margin: 30px;
+			padding: 20px;
+		}
+		body{
+			background-color: gray;
+		}
+
 	</style>
 </head>
-<body>
+<body >
 	<h1 style="color:blue; text-align: center;">Welcome to my page</h1>
 	<h2>Hi there welcome again</h2>
 	<form>
@@ -19,5 +31,8 @@
 	</form> 
 	<p>Hi there! This aia a paragraph</p>
 	<p>This is another paragraph</p>
+	<div>
+		<b>lorem ipsum</b>
+	</div>
 </body>
 </html>
