--- a/hello.html
+++ b/hello.html
@@ -19,6 +19,9 @@
 		body{
 			background-color: gray;
 		}
+		#man{
+			background-color: black;
+		}
 
 	</style>
 </head>
@@ -29,7 +32,7 @@
 		<input type="text" placeholder="Full name" name="name">
 		<button>Submit!</button>
 	</form> 
-	<p>Hi there! This aia a paragraph</p>
+	<p id="man">Hi there! This aia a paragraph</p>
 	<p>This is another paragraph</p>
 	<div>
 		<b>lorem ipsum</b>
