--- a/hello.html
+++ b/hello.html
@@ -22,12 +22,16 @@
 		#man{
 			background-color: black;
 		}
+		.uml{
+			color: blue;
+		}
 
 	</style>
 </head>
 <body >
 	<h1 style="color:blue; text-align: center;">Welcome to my page</h1>
-	<h2>Hi there welcome again</h2>
+	<h2>Hi there <span class="uml">welcome</span> again</h2>
+	<h2 class="uml">Hi there welcome again</h2>
 	<form>
 		<input type="text" placeholder="Full name" name="name">
 		<button>Submit!</button>
