added another line

--- a/hello.html
+++ b/hello.html
@@ -38,6 +38,7 @@
 	</form> 
 	<p id="man">Hi there! This aia a paragraph</p>
 	<p>This is another paragraph</p>
+	<p>Here is a new feature</p>
 	<div>
 		<b>lorem ipsum</b>
 	</div>
