--- a/links0.html
+++ b/links0.html
@@ -2,9 +2,110 @@
 <html>
 <head>
 	<title>my new page</title>
+	<style type="text/css">
+		ol > li{
+			color: red;
+		}
+		input[type=text]{
+			color: white;
+			background-color: black;
+
+		}
+	</style>
 </head>
 <body>
 	<a href="hello.html">Click here</a>
+	<ol>
+		<li> one </li>
+		<li>two</li>
+		<ul>
+			<li>one</li>
+			<li>two</li>
+		</ul>
+		<li>three</li>
+	</ol>
+
+	<form>
+		<div>
+			<input type="text" placeholder="name" name="name">
+			<input type="password" name="password" placeholder="password">
+		</div>
+
+		<div>
+			<input name="country" list="countries" placeholder="country">
+			<datalist id="countries">
+				   <option value="Afganistan">Afghanistan</option>
+				   <option value="Albania">Albania</option>
+				   <option value="Algeria">Algeria</option>
+				   <option value="American Samoa">American Samoa</option>
+				   <option value="Andorra">Andorra</option>
+				   <option value="Angola">Angola</option>
+				   <option value="Anguilla">Anguilla</option>
+				   <option value="Antigua & Barbuda">Antigua & Barbuda</option>
+				   <option value="Argentina">Argentina</option>
+				   <option value="Armenia">Armenia</option>
+				   <option value="Aruba">Aruba</option>
+				   <option value="Australia">Australia</option>
+				   <option value="Austria">Austria</option>
+				   <option value="Azerbaijan">Azerbaijan</option>
+				   <option value="Bahamas">Bahamas</option>
+				   <option value="Bahrain">Bahrain</option>
+				   <option value="Bangladesh">Bangladesh</option>
+				   <option value="Barbados">Barbados</option>
+				   <option value="Belarus">Belarus</option>
+				   <option value="Belgium">Belgium</option>
+				   <option value="Belize">Belize</option>
+				   <option value="Benin">Benin</option>
+				   <option value="Bermuda">Bermuda</option>
+				   <option value="Bhutan">Bhutan</option>
+				   <option value="Bolivia">Bolivia</option>
+				   <option value="Bonaire">Bonaire</option>
+				   <option value="Bosnia & Herzegovina">Bosnia & Herzegovina</option>
+				   <option value="Botswana">Botswana</option>
+				   <option value="Brazil">Brazil</option>
+				   <option value="British Indian Ocean Ter">British Indian Ocean Ter</option>
+				   <option value="Brunei">Brunei</option>
+				   <option value="Bulgaria">Bulgaria</option>
+				   <option value="Burkina Faso">Burkina Faso</option>
+				   <option value="Burundi">Burundi</option>
+				   <option value="Cambodia">Cambodia</option>
+				   <option value="Cameroon">Cameroon</option>
+				   <option value="Canada">Canada</option>
+				   <option value="Canary Islands">Canary Islands</option>
+				   <option value="Cape Verde">Cape Verde</option>
+				   <option value="Cayman Islands">Cayman Islands</option>
+				   <option value="Central African Republic">Central African Republic</option>
+				   <option value="Chad">Chad</option>
+				   <option value="Channel Islands">Channel Islands</option>
+				   <option value="Chile">Chile</option>
+				   <option value="China">China</option>
+				   <option value="Christmas Island">Christmas Island</option>
+				   <option value="Cocos Island">Cocos Island</option>
+				   <option value="Colombia">Colombia</option>
+				   <option value="Comoros">Comoros</option>
+				   <option value="Congo">Congo</option>
+				   <option value="Cook Islands">Cook Islands</option>
+				   <option value="Costa Rica">Costa Rica</option>
+				   <option value="Cote DIvoire">Cote DIvoire</option>
+				   <option value="Croatia">Croatia</option>
+				   <option value="Cuba">Cuba</option>
+				   <option value="Curaco">Curacao</option>
+				   <option value="Cyprus">Cyprus</option>
+				   <option value="Czech Republic">Czech Republic</option>
+				   <option value="Denmark">Denmark</option>
+				   <option value="Djibouti">Djibouti</option>
+				   <option value="Dominica">Dominica</option>
+				   <option value="Dominican Republic">Dominican Republic</option>
+				   <option value="East Timor">East Timor</option>
+				   <option value="Ecuador">Ecuador</option>
+				   <option value="Egypt">Egypt</option>
+				   <option value="El Salvador">El Salvador</option>
+				   <option value="Equatorial Guinea">Equatorial Guinea</option>
+				   <option value="Eritrea">Eritrea</option>
+				   <option value="Estonia">Estonia</option>
+			</datalist>
+		</div>
+	</form>
 
 </body>
 </html>
